--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ checkstyle {
 }
 sonarqube {
     properties {
-        property "sonar.projectKey", "CalendarListView"
+        property "sonar.projectKey", "applibgroup_CalendarListview"
         property "sonar.organization", "applibgroup"
         property "sonar.host.url", "https://sonarcloud.io/"
         property "sonar.java.checkstyle.reportPaths", "checkstyle.xml"
